# guise

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: guise.rb
src/: account.rs  app.rs  cli.rs  config.rs  doctor.rs  main.rs  paths.rs
